--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,7 +1,4 @@
 @import 'normalize.css';
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-// @import url('src/assets/font-awesome/css/fontawesome.min.css');
-// @import url('src/assets/themify-icons/themify-icons.css');
 
 :root {
     --primaryColor: #fe2c55;
@@ -26,28 +23,45 @@ html {
 }
 
 body {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'ProximaNova', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
 }
 
+// Fonts
+@font-face {
+    font-family: SofiaPro;
+    src: url('/assets/fonts/sofiapro-semibold.otf');
+    font-weight: 700;
+}
+@font-face {
+    font-family: ProximaNova;
+    src: url('/assets/fonts/ProximaNova-Semibold.woff2');
+    font-weight: 600;
+}
+@font-face {
+    font-family: ProximaNova;
+    src: url('/assets/fonts/Proxima-Nova-Regular.woff2');
+    font-weight: 400;
+}
+
 ::placeholder {
     font-size: 1.6rem;
     font-weight: 400;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'ProximaNova', sans-serif;
     color: var(--textSecondaryColor);
 }
 ::-moz-placeholder {
     font-size: 1.6rem;
     font-weight: 400;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'ProximaNova', sans-serif;
     color: var(--textSecondaryColor);
 }
 ::-webkit-input-placeholder {
     font-size: 1.6rem;
     font-weight: 400;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'ProximaNova', sans-serif;
     color: var(--textSecondaryColor);
 }
 
