--- a/src/components/MyButton/MyButton.module.scss
+++ b/src/components/MyButton/MyButton.module.scss
@@ -7,7 +7,7 @@
     font-weight: 700;
     color: var(--textColor);
     background-color: var(--whiteColor);
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'ProximaNova', sans-serif;
     outline: none;
     border: 1px solid var(--borderColor);
     border-radius: 4px;
