--- a/src/components/MyButton/MyButton.module.scss
+++ b/src/components/MyButton/MyButton.module.scss
@@ -1,17 +1,23 @@
+// chưa tối ưu, code rác ?
 .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: start;
     padding: 6px 8px;
-    min-width: 110px;
-    text-align: center;
-    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    text-align: start;
     font-size: 1.6rem;
     font-weight: 700;
-    color: var(--textColor);
-    background-color: var(--whiteColor);
     font-family: 'ProximaNova', sans-serif;
+    background-color: transparent;
+    border: 1px solid transparent;
     outline: none;
-    border: 1px solid var(--borderColor);
-    border-radius: 4px;
-    // transition: ease-in-out 0.3s;
+    gap: 8px;
+
+    &:hover {
+        background-color: var(--bg-lightColor);
+    }
 
     + .wrapper {
         margin-left: 16px;
@@ -23,18 +29,35 @@
         background-color: var(--bg-lightColor);
     }
 }
+.wrapper.text {
+    min-width: 110px;
+}
+.wrapper.textcenter {
+    justify-content: center;
+}
+.wrapper.basic {
+    color: var(--textColor);
+    background-color: var(--whiteColor);
+    border-color: var(--borderColor);
+    border-radius: 4px;
+    &:hover {
+        background: var(--bg-lightColor);
+    }
+}
 .wrapper.primary {
     color: var(--whiteColor);
     background-color: var(--primaryColor);
     border-color: transparent;
+    border-radius: 4px;
     &:hover {
         background: linear-gradient(to top right, #ff4d71, #ef2950);
     }
 }
 .wrapper.secondary {
     color: var(--primaryColor);
-    background-color: var(--bg-whiteColor);
-    border-color: var(--primaryColor);
+    background-color: var(--whiteColor);
+    border-color: currentColor;
+    border-radius: 4px;
     &:hover {
         background-color: #fff3f5;
     }
