--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -27,6 +27,34 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+    overflow-y: overlay;
+}
+
+// Scrollbar
+
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #00000026;
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #00000026;
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: #00000000;
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: #00000000;
 }
 
 // Fonts
