--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -2,6 +2,25 @@
     width: 100%;
     height: 60px;
     box-shadow: 0 1px 1px var(--borderColor);
+    transition: ease-in-out 0.3s;
+}
+.sticky {
+    z-index: 9999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    animation: floatDown ease 0.5s;
+}
+@keyframes floatDown {
+    from {
+        opacity: 50%;
+        transform: translateY(-100%);
+    }
+    to {
+        opacity: 100%;
+        transform: translateY(0);
+    }
 }
 .inner {
     display: flex;
@@ -35,6 +54,7 @@
     background-color: var(--bg-lightColor);
     border: 1px solid var(--borderColor);
     border-radius: 50%;
+    overflow: hidden;
     flex-shrink: 0;
 
     img {
@@ -42,6 +62,7 @@
         inset: 0;
         width: 100%;
         height: 100%;
+        border-radius: 50%;
         object-fit: cover;
     }
 
