--- a/src/components/Layout/components/SearchMachine/SearchMachine.module.scss
+++ b/src/components/Layout/components/SearchMachine/SearchMachine.module.scss
@@ -26,6 +26,7 @@
     height: 100%;
     font-size: 1.6rem;
     font-weight: 400;
+    font-family: 'ProximaNova', sans-serif;
     color: var(--textColor);
     background-color: var(--bg-lightColor);
     border-bottom-left-radius: 46px;
@@ -68,7 +69,7 @@
 }
 
 .loading {
-    animation: rotating linear 1s infinite;
+    animation: rotating linear 0.5s infinite;
     transition: ease-in-out 0.3s;
 }
 
