--- a/src/components/Popper/DropdownMenu/DropdownMenu.module.scss
+++ b/src/components/Popper/DropdownMenu/DropdownMenu.module.scss
@@ -26,22 +26,14 @@
     line-height: 46px;
 }
 .list {
-    padding-bottom: 8px;
+    padding: 4px;
+    gap: 4px;
     width: 100%;
     list-style: none;
+    max-height: min((100vh - 100px) - 60px, 734px);
+    overflow-y: overlay;
 }
-.item {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    font-size: 1.6rem;
-    font-weight: 700;
-    color: var(--blackColor);
-    &:hover {
-        cursor: pointer;
-        background-color: var(--bg-lightColor);
-    }
-}
+
 .content {
     margin-left: 8px;
 }
