--- a/src/components/MyButton/MyButton.module.scss
+++ b/src/components/MyButton/MyButton.module.scss
@@ -2,7 +2,7 @@
 .wrapper {
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 6px 8px;
     width: 100%;
     height: 100%;
