--- a/src/layouts/components/SearchMachine/SearchMachine.module.scss
+++ b/src/layouts/components/SearchMachine/SearchMachine.module.scss
@@ -21,7 +21,7 @@
     width: 360px;
 }
 .search-box {
-    padding: 12px 16px;
+    padding: 12px 32px 12px 16px;
     min-width: 309px;
     height: 100%;
     font-size: 1.6rem;
@@ -58,8 +58,13 @@
 
 .clear,
 .loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     right: 60px;
+    height: 20px;
+    width: 20px;
     font-size: 1.6rem;
     color: var(--textSecondaryColor);
     background-color: transparent;
